--- a/src/app/public/pages/home/home.component.html
+++ b/src/app/public/pages/home/home.component.html
@@ -1,1 +1,127 @@
-<p>home works!</p>
+<div class="container-menu">
+  <div class="container-sect2">
+      <ul class="social-icons">
+        <li>
+          <a href="#" class="social-link" target="_blank"
+            ><i class="bi bi-facebook" aria-hidden="true"></i
+          ></a>
+        </li>
+        <li>
+          <a href="#" class="social-link" target="_blank"
+            ><i class="bi bi-twitter" aria-hidden="true"></i
+          ></a>
+        </li>
+        <li>
+          <a href="#" class="social-link" target="_blank"
+            ><i class="bi bi-google" aria-hidden="true"></i
+          ></a>
+        </li>
+        <li>
+          <a href="#" class="social-link" target="_blank"
+            ><i class="bi bi-instagram" aria-hidden="true"></i
+          ></a>
+        </li>
+        <li>
+          <a href="#" class="social-link" target="_blank"
+            ><i class="bi bi-github" aria-hidden="true"></i
+          ></a>
+        </li>
+        <li>
+          <a href="#" class="social-link" target="_blank"
+            ><i class="bi bi-whatsapp" aria-hidden="true"></i
+          ></a>
+        </li>
+        <li>
+          <a href="#" class="social-link" target="_blank"
+            ><i class="bi bi-tiktok" aria-hidden="true"></i
+          ></a>
+        </li>
+      </ul>
+      <div class="header-content">
+        <h4 class="header-subtitle">Hola, Yo soy</h4>
+        <h1 class="header-title">Jonnathan Uzhca</h1>
+        <h6 class="header-mono">Frondend y Banckend Designer | Developer</h6>
+        <p>
+          Soy programador junior con experiencia en la creación y desarrollo de
+          aplicaciones web completas. Desde la interfaz
+          de usuario hasta la lógica del servidor.
+        </p>
+        <button class="btn btn-primary btn-rounded">
+          <i class="ti-printer pr-2"></i>Leer mas
+        </button>
+      </div>
+  </div>
+</div>
+
+<header id="Heder">
+  <input type="checkbox" id="menu" />
+  <label for="menu">
+    <img src="assets/img/icons/menu.png" class="menu-icon" alt="">
+  </label>
+  <ul class="menu">
+    <li class="item">
+      <a href="#Home" class="nav-link">Home</a>
+    </li>
+    <li class="item">
+      <a href="#About" class="nav-link">About</a>
+    </li>
+  <!-- </ul>
+  <ul class="menu"> -->
+    
+      <img src="assets/img/jonathan01.png" alt="" class="brand-img" >
+      <li class="item-Name">
+          <h5>Jonnathan Uzhca</h5>
+          <p>Web Designer</p>
+      </li>
+  
+  <!-- </ul>
+  <ul class="menu"> -->
+    <li class="item">
+      <a href="#Proyectos" class="nav-link">Proyectos</a>
+    </li>
+    <li class="item">
+      <a href="#Contactos" class="nav-link">Contactos</a>
+    </li>
+  </ul>
+  
+
+</header>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
