--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,4 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 @import "primeng/resources/primeng.css";
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "~bootstrap/dist/css/bootstrap.min.css";
+@import "~bootstrap-icons/font/bootstrap-icons.css";
