versin 01.0.0. modifcacion de css

--- a/src/app/public/pages/home/home.component.html
+++ b/src/app/public/pages/home/home.component.html
@@ -2,37 +2,32 @@
   <div class="container-sect2">
       <ul class="social-icons">
         <li>
-          <a href="#" class="social-link" target="_blank"
+          <a href="https://www.facebook.com/tatan.uzhca/?viewas=100000686899395&locale=es_LA" class="social-link" target="_blank"
             ><i class="bi bi-facebook" aria-hidden="true"></i
           ></a>
         </li>
         <li>
-          <a href="#" class="social-link" target="_blank"
-            ><i class="bi bi-twitter" aria-hidden="true"></i
-          ></a>
-        </li>
-        <li>
-          <a href="#" class="social-link" target="_blank"
+          <a href="https://myaccount.google.com/profile/profiles-summary?hl=es_419&utm_source=OGB&utm_medium=act" class="social-link" target="_blank"
             ><i class="bi bi-google" aria-hidden="true"></i
           ></a>
         </li>
         <li>
-          <a href="#" class="social-link" target="_blank"
+          <a href="https://www.instagram.com/jonnathan0106/" class="social-link" target="_blank"
             ><i class="bi bi-instagram" aria-hidden="true"></i
           ></a>
         </li>
         <li>
-          <a href="#" class="social-link" target="_blank"
+          <a href="https://github.com/JonnathanUzhca" class="social-link" target="_blank"
             ><i class="bi bi-github" aria-hidden="true"></i
           ></a>
         </li>
         <li>
-          <a href="#" class="social-link" target="_blank"
+          <a href="https://wa.link/8c3n58" class="social-link" target="_blank"
             ><i class="bi bi-whatsapp" aria-hidden="true"></i
           ></a>
         </li>
         <li>
-          <a href="#" class="social-link" target="_blank"
+          <a href="https://www.tiktok.com/@jonnathanuzhca?_t=8mc22cFs8OL&_r=1" class="social-link" target="_blank"
             ><i class="bi bi-tiktok" aria-hidden="true"></i
           ></a>
         </li>
