--- a/src/app/public/pages/home/home.component.scss
+++ b/src/app/public/pages/home/home.component.scss
@@ -115,14 +115,17 @@ label {
   }
 
   .header-content {
-    background-color: red;
+    // background-color: red;
     width: 90%;
     padding: 0 0;
+  }
+  .auto{
+    display: none;
   }
 }
 
 .container-sect2 {
-  background-color: rgba(19, 41, 61, 0.9);
+  background-color: rgba(19, 41, 61, 0.8);
   position: absolute;
   width: 100%;
   height: 84vh;
@@ -135,14 +138,14 @@ label {
   align-items: center;
 }
 .container-menu {
-  // overflow-x: hidden;
+  overflow-x: hidden;
   width: 100%;
   height: 84vh;
-  // background-image: url('/assets/img/wallpapers/wall1.jpg');
+  background-image: url('/assets/img/wallpapers/header.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  // background-attachment: fixed;
+  background-attachment: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -215,7 +218,7 @@ i {
 .content-slogan {
   display: flex;
   // background-color: red;
-  width: 400px;
+  width: 350px;
   height: 40px;
   color: #fff;
   font-size: 20px;
@@ -279,6 +282,13 @@ p {
     margin-top: 0;
   }
 }
+.btGroup{
+  padding: 0px 20px;
+}
+.btnSecon{
+  margin: 2px;
+  padding: 2px 15px;
+}
 
 .slogan-li::before {
   content: "[ ";
@@ -291,4 +301,42 @@ p {
   color: #3E92CC;
   font-size: 25px;
   font-weight: 400;
+}
+.auto{
+  // background-color: red;
+  height: 65vh;
+}
+
+.container-rigth{
+  background: rgba(0,0,0,0.5);
+  width: 90%;
+  margin: 5%;
+  height: 50vh;
+  padding: 18px;
+  left: 100%;
+  border-radius: 15px;
+}
+
+.geo-config{
+  color: #777878;
+}
+
+.text-header-right{
+
+}
+
+
+.container-left{
+margin: 20% 5%;
+}
+.container-title-haeder{
+  // background-color: red;
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.container-paragran{
+  margin: 20px 40px;
+  // background-color: red;
 }
