--- a/src/app/public/pages/home/home.component.scss
+++ b/src/app/public/pages/home/home.component.scss
@@ -315,6 +315,7 @@ p {
   padding: 18px;
   left: 100%;
   border-radius: 15px;
+  // position: initial;
 }
 
 .geo-config{
@@ -339,4 +340,149 @@ margin: 20% 5%;
 .container-paragran{
   margin: 20px 40px;
   // background-color: red;
+}
+
+.textConta{
+  width: 100%;
+  height: 100vh;
+  // display: flex;
+  align-items: center;
+  justify-content: center;
+
+
+}
+.highlight {
+  color: white; /* Cambia el color aquí */
+}
+.verde{
+  color: rgb(172, 250, 45); /* Cambia el color aquí */
+}
+.yellow{
+  color: yellow;
+}
+
+.text{
+  animation: animacion 2.5s steps(35), transparent .5s step-end infinite alternate;
+  width: 112.1em;
+  white-space: nowrap;
+  overflow: hidden;
+  border-right: 3px solid;
+}
+
+@keyframes animacion{
+  from{
+    width: 0px;
+  }
+}
+
+@keyframes transparent {
+  50%{
+    border-color: transparent;
+  }
+}
+
+@import url('https://fonts.googleapis.com/css?family=Raleway:900&display=swap');
+
+.wrapper {
+  position: relative;
+  width: 300px;
+  height: 300px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) translateY(20px) scale(1.5);
+  overflow: hidden;
+}
+
+@media screen and (max-width: 600px) {
+  .wrapper {
+    transform: translate(-50%, -50%) scale(1);
+  }
+}
+.containerqw {
+  // position: absolute;
+  width: 300px;
+  height: 300px;
+}
+
+[data-typing] {
+  position: absolute;
+  top: 0;
+  /*   border: 1px solid #f55; */
+  transform-origin: 0% 0%;
+  font-size: 25px;
+  margin: 0;
+  padding: 0;
+  top: 100px;
+  line-height: 1;
+  color: #333;
+}
+[data-typing="i"] {
+  top: 0;
+  left: 50px;
+  font-size: 90px;
+  height: 70px;
+  line-height: 70px;
+}
+[data-typing="frontend"] {
+  top: 3px;
+  left: 80px;
+  font-size: 27px;
+  letter-spacing: 1px;
+}
+[data-typing="engineer"] {
+  top: 30px;
+  left: 80px;     
+  font-size: 40px;
+  letter-spacing: 1px;
+}
+[data-typing="with"] {
+  top: 74px;
+  left: 265px;
+  font-size: 36px;
+  transform: rotate(90deg);
+  background: #333;
+  color: #fff;
+  padding: 0px 4px;
+}
+[data-typing="javascript"] {
+  top: 74px;
+  left: 229px;
+  transform: rotate(90deg);
+  font-size: 35px;
+}
+[data-typing="typescript"] {
+  top: 72px;
+  right: 110px;
+  font-size: 25px;
+}
+[data-typing="css"] {
+  top: 97px;
+  right: 110px;
+  font-size: 40px;
+}
+[data-typing="nodejs"] {
+  top: 134px;
+  right: 110px;
+  font-size: 35px;
+}
+[data-typing="animation"] {
+  top: 167px;
+  right: 110px;
+  font-size: 35px;
+}
+[data-typing="scenejs"] {
+  top: 200px;
+  right: 110px;
+  font-size: 35px;
+}
+
+a {
+  color: #333;
+  text-decoration: none;
+}
+
+body .scenejs-editor-timeline {
+  position: fixed;
+  bottom: 0;
+  max-height: 300px;
 }
